--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,8 +5,11 @@
         "target": "ES6",
         "module": "CommonJS",
         "strict": true,
-        "esModuleInterop": true
+        "typeRoots": ["./src/types", "./node_modules/@types"],
+        "esModuleInterop": true,
+        "skipLibCheck": true,                     
+        "forceConsistentCasingInFileNames": true
     },
     "exclude": ["node_modules"],
-    "include": ["src/**/*"]
+    "include": ["src/**/*", "src/types"]
 }
