--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "@types/cookie-session": "^2.0.49",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.10",
     "express-session": "^1.18.1",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
